Add auto-scan triggers for Facebook tabs
Background script now triggers page scans on Facebook tabs when activated, updated, or navigated via SPA. Manifest updated to request 'webNavigation' permission to support SPA navigation detection.

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "Facebook Phishing Detector",
     "version": "1.0",
     "description": "Detects and blurs potential phishing links on Facebook using a hybrid AI model.",
-    "permissions": ["activeTab", "scripting", "storage"],
+    "permissions": ["activeTab", "scripting", "storage", "webNavigation"],
     "host_permissions": [
         "https://www.facebook.com/*",
         "http://127.0.0.1:5000/*"
