--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,12 @@
     "name": "Facebook Phishing Detector",
     "version": "1.0",
     "description": "Detects and blurs potential phishing links on Facebook using a hybrid AI model.",
-    "permissions": ["activeTab", "scripting", "storage", "webNavigation"],
+    "permissions": ["activeTab", "scripting", "storage", "webNavigation", "tabs"],
     "host_permissions": [
+        "https://facebook.com/*",
         "https://www.facebook.com/*",
+        "https://m.facebook.com/*",
+        "https://web.facebook.com/*",
         "http://127.0.0.1:5000/*"
     ],
     "background": {
@@ -14,7 +17,12 @@
     },
     "action": { "default_popup": "popup.html" },
     "content_scripts": [{
-        "matches": ["https://www.facebook.com/*"],
+        "matches": [
+            "https://facebook.com/*",
+            "https://www.facebook.com/*",
+            "https://m.facebook.com/*",
+            "https://web.facebook.com/*"
+        ],
         "js": ["content_script.js"],
         "run_at": "document_idle"
     }],
