--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,7 @@
             "https://web.facebook.com/*"
         ],
         "js": ["content_script.js"],
-        "run_at": "document_idle"
+        "run_at": "document_end"
     }],
     "icons": {
         "16": "icons/icon16.png",
