Improve prediction diagnostics and add debug script
Enhanced the predict and predict_batch endpoints in app.py to log detailed reconstruction errors and return additional diagnostic fields in API responses. Added debug_recon.py for standalone debugging of autoencoder reconstruction errors and scoring. Updated .gitignore to exclude new notebook and Python cache files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 DaKuGuMen-Anomaly-Detection-in-Facebook-to-Identify-Phishing-Links (1).pdf
 Final_AE_+_GCN.ipynb
 phishing_api/firebase-sa.json
+Pre_Train_and_Fine_Tune_AE_+_GCN.ipynb
+__pycache__/app.cpython-311.pyc
