Update Firebase service account credentials
Replaced the Firebase service account JSON file with new credentials and updated .gitignore to include firebase-sa.json. This change likely reflects a rotation or replacement of service account keys for security or access management.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Final_AE_+_GCN.ipynb
 phishing_api/firebase-sa.json
 Pre_Train_and_Fine_Tune_AE_+_GCN.ipynb
 __pycache__/app.cpython-311.pyc
+firebase-sa.json
