--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ phishing_api/firebase-sa.json
 Pre_Train_and_Fine_Tune_AE_+_GCN.ipynb
 __pycache__/app.cpython-311.pyc
 firebase-sa.json
+firebase-sa.json
