--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,9 @@ scikit-learn==1.3.2
 tldextract==3.6.0
 google-cloud-firestore==2.12.0
 gunicorn==21.2.0
+requests==2.31.0
+# Optional / notebook extras
+matplotlib==3.8.1
+seaborn==0.12.2
+# Ensure protobuf compatible with gRPC
+# protobuf>=6.31.1,<7
