--- a/fusion_config.json
+++ b/fusion_config.json
@@ -1,1 +1,1 @@
-{"ae_threshold": 0.1414814293384552, "fusion_weight_ae": 0.0}
+{"ae_threshold": 0.12821699678897858, "fusion_weight_ae": 0.06000000000000001}
