--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
 flask==2.3.3
 flask-cors==4.0.0
-tensorflow==2.13.0
-keras==2.13.1
+tensorflow==2.16.1
+keras
 pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.2
+numpy==1.26.4
+scikit-learn==1.7.1
 tldextract==3.6.0
 google-cloud-firestore==2.12.0
 gunicorn==21.2.0
-requests==2.31.0
 # Optional / notebook extras
 matplotlib==3.8.1
 seaborn==0.12.2
