Remove undersampling and update model artifacts
Pre-training pipeline now uses all available public and user-reported data, eliminating undersampling for improved learning. Updated documentation, configuration, model weights, scaler, and node mapping to reflect these changes and retrained models.

--- a/fusion_config.json
+++ b/fusion_config.json
@@ -1,1 +1,1 @@
-{"ae_threshold": 0.13125839829444885, "fusion_weight_ae": 0.16999999999999998}
+{"ae_threshold": 0.11105526983737946, "fusion_weight_ae": 0.13}
