--- a/fusion_config.json
+++ b/fusion_config.json
@@ -1,1 +1,1 @@
-{"ae_threshold": 0.11105526983737946, "fusion_weight_ae": 0.13}
+{"ae_threshold": 0.03617635741829872, "fusion_weight_ae": 0.15000000000000002}
